--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "react": "^16.13.1",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^7.28.1",
     "react-scripts": "3.4.3",
+    "react-toastify": "^8.2.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.3.2"
   },
